fix: switch from viewport to percentage to fix overflow issue

--- a/src/main.css
+++ b/src/main.css
@@ -15,7 +15,7 @@
 }
 
 #root {
-	width: 100vw;
+	width: 100%;
 	min-height: 100vh;
 	background-color: black;
 }
